--- a/the_0024th_problem/templates/table.html
+++ b/the_0024th_problem/templates/table.html
@@ -1,23 +1,24 @@
 {% extends "base.html" %}
 {% block content %}
 <script type="text/javascript">
-$('.delete').on('click',function(evt){
-    evt.preventDefault();
-    var task_id = $(this).attr('id');
-    $.ajax({
-        url: "/task/" + task_id+ "/delete",
-        type: "POST",
-        dataType: "JSON",
-        success:function(resp){
-            if(resp.status != 1 ){
-                // 不等于 1 则说明删除失败，原因有很多，具体呢，就是服务端返回的 resp.message
-                alert("删除失败，原因："+ resp.message);
-            }
-            
-            // resp.status 等于 1 时，则说明成功，前端处理，此处为重新加载本页。
-            location.reload()
-          
-        }
+$(document).ready(function(){
+  	$(".delete").click(function(evt){
+	    evt.preventDefault();
+	    var task_id = $(this).attr('id');
+	    $.ajax({
+	        url: "/task/" + task_id+ "/delete",
+	        type: "GET",
+	        dataType: "JSON",
+	        success:function(resp){
+	            if(resp.status != 1 ){
+	                // 不等于 1 则说明删除失败，原因有很多，具体呢，就是服务端返回的 resp.message
+	                alert("删除失败，原因："+ resp.message);
+	            }
+	            
+	            // resp.status 等于 1 时，则说明成功，前端处理，此处为重新加载本页。
+	            location.reload()
+        	}
+        })	
     })
 })
 </script>
